--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     },
     "plugins": [{ "name": "typescript-plugin-css-modules" }]
   },
-  "include": ["src", "config"],
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
